// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bfs extracts ex:Something first 1`] = `
Array [
  Object {
    "id": "1",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/Something",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "2",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/Something",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/p",
        },
        "values": Array [
          Object {
            "id": "3",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/o",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/relatedTo",
        },
        "values": Array [
          Object {
            "id": "4",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/Alice.md",
                },
              ],
              "types": Array [],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "5",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Charlie",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/note/Charlie.md",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/s",
    },
  },
  Object {
    "id": "6",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Note",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "7",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "8",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "WhiteRabbit",
            },
          },
          Object {
            "id": "9",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
              },
              "language": "es",
              "termType": "Literal",
              "value": "Conejo blanco",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Object {
            "id": "10",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/WhiteRabbit.md",
                },
              ],
              "types": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/Block",
                },
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/Rabbit",
                },
              ],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Object {
                    "id": "11",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                  Object {
                    "id": "12",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/Rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "13",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Object {
                    "id": "14",
                    "isInternalLink": true,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Object {
                    "id": "15",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/contains",
                },
                "values": Array [
                  Object {
                    "id": "16",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Object {
                            "id": "20",
                            "isInternalLink": true,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Block",
                            },
                          },
                          Object {
                            "id": "21",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://schema.org/Place",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Object {
                            "id": "22",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/selector",
                        },
                        "values": Array [
                          Object {
                            "id": "23",
                            "isInternalLink": true,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/postalCode",
                        },
                        "values": Array [
                          Object {
                            "id": "24",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "4879",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/streetAddress",
                        },
                        "values": Array [
                          Object {
                            "id": "25",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "5 Wonderland Street",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b0_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/address",
                },
                "values": Array [
                  Object {
                    "id": "17",
                    "isInternalLink": true,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b0_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/knows",
                },
                "values": Array [
                  Object {
                    "id": "18",
                    "isInternalLink": true,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/Alice.md",
                        },
                      ],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Charlie.md",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
                },
                "values": Array [
                  Object {
                    "id": "19",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/Alice.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Note",
                        },
                      ],
                    },
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Object {
                            "id": "26",
                            "isInternalLink": true,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Note",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Object {
                            "id": "27",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Alice",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/contains",
                        },
                        "values": Array [
                          Object {
                            "id": "28",
                            "isInternalLink": false,
                            "meta": Object {
                              "graphs": Array [
                                Object {
                                  "termType": "NamedNode",
                                  "value": "http://example.org/note/Alice.md",
                                },
                              ],
                              "types": Array [
                                Object {
                                  "termType": "NamedNode",
                                  "value": "http://pkm-united.org/Block",
                                },
                              ],
                            },
                            "rows": Array [
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                                },
                                "values": Array [
                                  Object {
                                    "id": "30",
                                    "isInternalLink": true,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "http://pkm-united.org/Block",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/name",
                                },
                                "values": Array [
                                  Object {
                                    "id": "31",
                                    "isInternalLink": true,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://pkm-united.org/selector",
                                },
                                "values": Array [
                                  Object {
                                    "id": "32",
                                    "isInternalLink": true,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/image",
                                },
                                "values": Array [
                                  Object {
                                    "id": "33",
                                    "isInternalLink": false,
                                    "meta": Object {
                                      "graphs": Array [],
                                      "types": Array [],
                                    },
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
                                    },
                                  },
                                ],
                              },
                            ],
                            "term": Object {
                              "termType": "BlankNode",
                              "value": "n3-1",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/knows",
                        },
                        "values": Array [
                          Object {
                            "id": "29",
                            "isInternalLink": true,
                            "meta": Object {
                              "graphs": Array [
                                Object {
                                  "termType": "NamedNode",
                                  "value": "http://example.org/note/Alice.md",
                                },
                              ],
                              "types": Array [],
                            },
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://example.org/note/Charlie.md",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Alice.md",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-0",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/WhiteRabbit.md",
    },
  },
  Object {
    "id": "34",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "quad",
        },
        "values": Array [
          Object {
            "id": "35",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "oh-my",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "shared",
    },
  },
  Object {
    "id": "36",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "37",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "loves to drink tea with",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
    },
  },
]
`;

exports[`bfs maps URIs to their corresponding IDs 1`] = `
TermMap {
  "index": Map {
    "<http://example.org/note/WhiteRabbit.md>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/note/WhiteRabbit.md",
      },
      "value": Array [
        "78",
      ],
    },
    "<http://pkm-united.org/Note>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://pkm-united.org/Note",
      },
      "value": Array [
        "79",
        "99",
      ],
    },
    "\\"WhiteRabbit\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "WhiteRabbit",
      },
      "value": Array [
        "80",
      ],
    },
    "\\"Conejo blanco\\"@es" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
        },
        "language": "es",
        "termType": "Literal",
        "value": "Conejo blanco",
      },
      "value": Array [
        "81",
      ],
    },
    "_:n3-4" => Object {
      "term": Object {
        "termType": "BlankNode",
        "value": "n3-4",
      },
      "value": Array [
        "82",
      ],
    },
    "<http://pkm-united.org/Block>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://pkm-united.org/Block",
      },
      "value": Array [
        "83",
        "92",
        "103",
      ],
    },
    "<http://example.org/Rabbit>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/Rabbit",
      },
      "value": Array [
        "84",
      ],
    },
    "\\"White rabbit\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "White rabbit",
      },
      "value": Array [
        "85",
        "86",
      ],
    },
    "<https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
      },
      "value": Array [
        "87",
      ],
    },
    "_:b2_b4" => Object {
      "term": Object {
        "termType": "BlankNode",
        "value": "b2_b4",
      },
      "value": Array [
        "88",
        "89",
      ],
    },
    "<http://example.org/note/Charlie.md>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/note/Charlie.md",
      },
      "value": Array [
        "90",
        "102",
        "114",
      ],
    },
    "<http://example.org/note/Alice.md>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/note/Alice.md",
      },
      "value": Array [
        "91",
      ],
    },
    "<http://schema.org/Place>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://schema.org/Place",
      },
      "value": Array [
        "93",
      ],
    },
    "\\"Wozenderlands\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "Wozenderlands",
      },
      "value": Array [
        "94",
        "95",
      ],
    },
    "\\"4879\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "4879",
      },
      "value": Array [
        "96",
      ],
    },
    "\\"5 Wonderland Street\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "5 Wonderland Street",
      },
      "value": Array [
        "97",
      ],
    },
    "\\"Charlie\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "Charlie",
      },
      "value": Array [
        "98",
      ],
    },
    "\\"Alice\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "Alice",
      },
      "value": Array [
        "100",
        "104",
        "105",
      ],
    },
    "_:n3-5" => Object {
      "term": Object {
        "termType": "BlankNode",
        "value": "n3-5",
      },
      "value": Array [
        "101",
      ],
    },
    "<https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
      },
      "value": Array [
        "106",
      ],
    },
    "<shared>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "shared",
      },
      "value": Array [
        "107",
      ],
    },
    "<oh-my>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "oh-my",
      },
      "value": Array [
        "108",
      ],
    },
    "<http://example.org/property/loves%20to%20drink%20tea%20with>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
      },
      "value": Array [
        "109",
      ],
    },
    "\\"loves to drink tea with\\"" => Object {
      "term": Object {
        "datatype": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "termType": "Literal",
        "value": "loves to drink tea with",
      },
      "value": Array [
        "110",
      ],
    },
    "<http://example.org/s>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/s",
      },
      "value": Array [
        "111",
      ],
    },
    "<http://example.org/Something>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/Something",
      },
      "value": Array [
        "112",
      ],
    },
    "<http://example.org/o>" => Object {
      "term": Object {
        "termType": "NamedNode",
        "value": "http://example.org/o",
      },
      "value": Array [
        "113",
      ],
    },
  },
}
`;

exports[`bfs maxDepth = 2 1`] = `
Array [
  Object {
    "id": "38",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Note",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "39",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "40",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "WhiteRabbit",
            },
          },
          Object {
            "id": "41",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
              },
              "language": "es",
              "termType": "Literal",
              "value": "Conejo blanco",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Object {
            "id": "42",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/WhiteRabbit.md",
                },
              ],
              "types": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/Block",
                },
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/Rabbit",
                },
              ],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Object {
                    "id": "43",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                  Object {
                    "id": "44",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/Rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "45",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Object {
                    "id": "46",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Object {
                    "id": "47",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/contains",
                },
                "values": Array [
                  Object {
                    "id": "48",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b1_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/address",
                },
                "values": Array [
                  Object {
                    "id": "49",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/WhiteRabbit.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Block",
                        },
                        Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/Place",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b1_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/knows",
                },
                "values": Array [
                  Object {
                    "id": "50",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/Alice.md",
                        },
                      ],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Charlie.md",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
                },
                "values": Array [
                  Object {
                    "id": "51",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://example.org/note/Alice.md",
                        },
                      ],
                      "types": Array [
                        Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/Note",
                        },
                      ],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Alice.md",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-2",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/WhiteRabbit.md",
    },
  },
  Object {
    "id": "52",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Block",
        },
        Object {
          "termType": "NamedNode",
          "value": "http://schema.org/Place",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "53",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Block",
            },
          },
          Object {
            "id": "54",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://schema.org/Place",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "55",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Wozenderlands",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/selector",
        },
        "values": Array [
          Object {
            "id": "56",
            "isInternalLink": true,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Wozenderlands",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/postalCode",
        },
        "values": Array [
          Object {
            "id": "57",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "4879",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/streetAddress",
        },
        "values": Array [
          Object {
            "id": "58",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "5 Wonderland Street",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "BlankNode",
      "value": "b1_b4",
    },
  },
  Object {
    "id": "59",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/WhiteRabbit.md",
        },
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "quad",
        },
        "values": Array [
          Object {
            "id": "60",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "oh-my",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "shared",
    },
  },
  Object {
    "id": "61",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "62",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Charlie",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/Charlie.md",
    },
  },
  Object {
    "id": "63",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/note/Alice.md",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/Note",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "64",
            "isInternalLink": true,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "65",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Alice",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Object {
            "id": "66",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/Alice.md",
                },
              ],
              "types": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/Block",
                },
              ],
            },
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Object {
                    "id": "68",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Object {
                    "id": "69",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Alice",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Object {
                    "id": "70",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Alice",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Object {
                    "id": "71",
                    "isInternalLink": false,
                    "meta": Object {
                      "graphs": Array [],
                      "types": Array [],
                    },
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-3",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/knows",
        },
        "values": Array [
          Object {
            "id": "67",
            "isInternalLink": true,
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/Alice.md",
                },
              ],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/note/Charlie.md",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/Alice.md",
    },
  },
  Object {
    "id": "72",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Object {
            "id": "73",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "loves to drink tea with",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
    },
  },
  Object {
    "id": "74",
    "isInternalLink": false,
    "meta": Object {
      "graphs": Array [
        Object {
          "termType": "DefaultGraph",
          "value": "",
        },
      ],
      "types": Array [
        Object {
          "termType": "NamedNode",
          "value": "http://example.org/Something",
        },
      ],
    },
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Object {
            "id": "75",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/Something",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/p",
        },
        "values": Array [
          Object {
            "id": "76",
            "isInternalLink": false,
            "meta": Object {
              "graphs": Array [],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/o",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/relatedTo",
        },
        "values": Array [
          Object {
            "id": "77",
            "isInternalLink": true,
            "meta": Object {
              "graphs": Array [
                Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/note/Alice.md",
                },
              ],
              "types": Array [],
            },
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/note/Charlie.md",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/s",
    },
  },
]
`;
